dataset1235/2025-2/2868285114/users/3212226731/executions/3649835072_4233865845.log
== SUBMISSION (2025-08-14 23:33:20)
-- CODE: 
celcius = float(input())
Fah = celcius*(9/5)+32
print(round(fah,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2))
                ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2))
                ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2))
                ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2))
                ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2))
                ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fah,2))
                ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 23:33:07)
-- CODE: 
celcius = float(input())
Fah = celcius*(9/5)+32
print (round(fah,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(fah,2))
                 ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(fah,2))
                 ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(fah,2))
                 ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(fah,2))
                 ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(fah,2))
                 ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(fah,2))
                 ^^^
NameError: name 'fah' is not defined. Did you mean: 'Fah'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 23:33:36)
-- CODE: 
celcius = float(input())
fah = celcius*(9/5)+32
print(round(fah,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
